# dprint-plugin-panache

./: .gitignore  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  schema.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-dprint-wasm.yml
src/: lib.rs
