[package]
name = "dprint-plugin-panache"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jolars/dprint-plugin-panache"
homepage = "https://panache.bz"
authors = ["Johan Larsson <johan@jolars.co>"]
description = "dprint Wasm plugin that wraps the Panache formatter for Quarto, Pandoc, and Markdown."
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
dprint-core = { version = "0.68", features = ["wasm"] }
panache-formatter = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
